@@ -1,7 +1,7 @@
 {
   "name": "patternlab-node",
   "description": "Pattern Lab is a collection of tools to help you create atomic design systems. This is the node command line interface (CLI).",
-  "version": "0.15.1",
+  "version": "0.15.2",
   "devDependencies": {
     "browser-sync": "^2.10.0",
     "del": "^2.0.2",
